// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> should render 1`] = `
<li
  className="mdc-list-item"
  id="mdc-list-item--2e732f05-f466-4fba-acb5-2f3be58daf75"
  role="menuitem"
  tabIndex="0"
>
  this is my value
</li>
`;

exports[`<MenuItem /> should render disabled 1`] = `
<li
  aria-disabled={true}
  className="mdc-list-item"
  id="mdc-list-item--2e732f05-f466-4fba-acb5-2f3be58daf75"
  role="menuitem"
  tabIndex="-1"
>
  this is my value
</li>
`;
